# conv2_visualizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.c  config.c  main.c  operation.c  tensor.c  widget.c
include/: app.h  config.h  operation.h  tensor.h
include/uis/: widget.h
memory/: CMakeLists.txt  ds_arena.c
memory/include/: ds_arena.h
